# Reddit-Ticker-Scrapper

./: .gitignore  .style.yapf  LICENSE  README.md  check.sh  format.sh  get_crypto_tickers.py  main.py  mypy.ini  pylintrc  pyproject.toml  tox.ini
data/: ada.json  crypto_tickers.csv  excluded.txt  tickers.csv
reddit_ticker_scrapper/: reddit_ticker_scrapper.py
tests/: conftest.py  test_reddit_ticker_scrapper.py
