[tool.poetry]
name = "reddit-scrapper"
version = "0.1.0"
description = ""
authors = ["David <david@dzhy.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.2.0"
pandas = "^1.2.3"
python-dotenv = "^0.16.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.7.3"
mypy = "^0.812"
isort = "^5.8.0"
pytest = "^6.2.3"
pytest-mock = "^3.5.1"
tox = "^3.23.0"
black = "^20.8b1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
